--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "software_custom_view"
 include ':app'
 include ':doubleindicatorseekbar'
+include ':color'
