ADD:添加流光字体demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".loading.LoadingActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".shine.ShineActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
