--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:name=".shine.ShineActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".noise.NoiseSplineActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
