--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
             android:name=".noise.NoiseSplineActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".draft.DraftActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
