FIX:倒计时组件widget限制宽高,防止view变化时抖动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
         <activity
             android:name=".countdown.CountDownActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".hencoder.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
