--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation 'com.blankj:utilcodex:1.31.0'
+
+    //ConsecutiveScroller
+    implementation 'com.github.donkingliang:ConsecutiveScroller:4.6.3'
 }
