--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
 
 
-
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
@@ -61,4 +60,9 @@ dependencies {
 
     //ConsecutiveScroller
     implementation 'com.github.donkingliang:ConsecutiveScroller:4.6.3'
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:compiler:4.12.0'
 }
