--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,10 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.github.bumptech.glide:compiler:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //base recyclerviewAdapter
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
+
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
 }
