--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
+
+    implementation project(":jsonholder")
 }
