--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:name=".AppApplication"
@@ -82,6 +84,10 @@
 
         <activity
             android:name=".randomtext.RandomTextActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".customOkhttp.ui.OKHttpActivity"
             android:exported="false" />
 
         <receiver
